crates/store/re_chunk/tests/snapshots/formatting__format_chunk_redacted.snap
---
source: crates/store/re_chunk/tests/formatting.rs
expression: "format!(\"{:-240}\", chunk)"
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                      │
│ * entity_path: /this/that                                                                                                                                                      │
│ * id: [**REDACTED**]                                                                                                                                                           │
│ * version: [**REDACTED**]                                                                                                                                                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌──────────────────────────────────────────────┬──────────────────────┬───────────────────────────────┬─────────────────────────────────┬────────────────────────────────────┐ │
│ │ RowId                                        ┆ frame_nr             ┆ log_time                      ┆ my_index                        ┆ example.MyPoints:colors            │ │
│ │ ---                                          ┆ ---                  ┆ ---                           ┆ ---                             ┆ ---                                │ │
│ │ type: non-null FixedSizeBinary(16)           ┆ type: Int64          ┆ type: Timestamp(ns)           ┆ type: List(UInt64)              ┆ type: List(UInt32)                 │ │
│ │ ARROW:extension:metadata:                    ┆ index_name: frame_nr ┆ index_name: log_time          ┆ component: my_index             ┆ archetype: example.MyPoints        │ │
│ │ {"namespace":"row"}                          ┆ is_sorted: true      ┆ is_sorted: true               ┆ component_type: example.MyIndex ┆ component: example.MyPoints:colors │ │
│ │ ARROW:extension:name: TUID                   ┆ kind: index          ┆ kind: index                   ┆ kind: data                      ┆ component_type: example.MyColor    │ │
│ │ is_sorted: true                              ┆                      ┆                               ┆                                 ┆ kind: data                         │ │
│ │ kind: control                                ┆                      ┆                               ┆                                 ┆                                    │ │
│ ╞══════════════════════════════════════════════╪══════════════════════╪═══════════════════════════════╪═════════════════════════════════╪════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                           ┆ 1                    ┆ 2025-01-10T18:43:42.123456789 ┆ [0, 1, 2]                       ┆ [0, 1, 2]                          │ │
│ └──────────────────────────────────────────────┴──────────────────────┴───────────────────────────────┴─────────────────────────────────┴────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
